<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameFiveVM" type="com.codrive.app.modules.framefive.data.viewmodel.FrameFiveVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnlanguage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearHome"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_900">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearUsername"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_marginTop="@dimen/_75pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_9pxv"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_2pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtLanguage}"
                    style="@style/txtSolidRounded" tools:text="@string/msg_start_locatio"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_9pxv"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_2pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtLanguageOne}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_destination"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtGroupSixteen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtGroupSixteen}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_vehicle_type"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtGroupTwenty"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_10pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtGroupTwenty}"
                    style="@style/txtSolidRounded" tools:text="@string/msg_seats_availa"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtGroupNineteen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_11pxv"
                    android:paddingStart="@dimen/_20pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtGroupNineteen}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_model"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtGroupEighteen"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_8pxv"
                    android:paddingStart="@dimen/_21pxh"
                    android:paddingTop="@dimen/_3pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtGroupEighteen}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_mileage"/>
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtTimeZone"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_11pxv"
                    android:paddingStart="@dimen/_21pxh"
                    android:paddingTop="@dimen/_1pxv"
                    android:singleLine="true"
                    android:text="@{frameFiveVM.frameFiveModel.txtTimeZone}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_total_cost"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnPublish"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_39pxv"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_marginTop="@dimen/_75pxv"
                android:layout_width="@dimen/_115pxh"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_26pxh"
                android:paddingStart="@dimen/_26pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_publish"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_1" tools:text="@string/lbl_publish"/>
        </LinearLayout>
    </LinearLayout>
</layout>
